[package]
name = "axum-todos"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio" ] }
dotenv = "0.15.0"
