[package]
name = "forecast"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.6.20"
base64 = "0.22.1"
dotenv = "0.15.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
sqlx = { version ="0.7", features = [
  "runtime-tokio-rustls",
  "macros",
  "any",
  "postgres"
] }
tokio = { version ="1.32.0", features = ["full"] }
