[package]
name = "photo-share-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
axum = "0.8.1"
async-graphql = "7.0.15"
async-graphql-axum = "7.0.15"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["json"] }

[dependencies.mongodb]
version = "3.2.1"
