[package]
name = "photo-share-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
tokio-stream = "0.1.17"
axum = { version = "0.8.1", features = ["ws"] }
async-graphql = "7.0.15"
async-graphql-axum = "7.0.15"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["json"] }
tower-http = { version = "0.6.2", features = ["cors"] }
slab = "0.4.2"
once_cell = "1.21.1"
futures-util = "0.3"

[dependencies.mongodb]
version = "3.2.1"
